--- a/ohmyfood/sass/base/_buttons.scss
+++ b/ohmyfood/sass/base/_buttons.scss
@@ -1,13 +1,20 @@
 a.button {
-    display: inline;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
-    font-weight: 500;
-    text-decoration: none;
-    background-image: linear-gradient(170deg, $secondary-color, $primary-color);
-    padding: 15px 6%;
-    border-radius: 50px;
-    margin: auto;
-    @include elements-shadow;
+  display: inline;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  text-decoration: none;
+  background-image: linear-gradient(170deg, $secondary-color, $primary-color);
+  padding: 15px 6%;
+  border-radius: 50px;
+  margin: auto;
+  margin-top: 15px;
+  @include elements-shadow;
+}
+
+@media (min-width: 425px) {
+  a.button {
+    padding: 15px 18px;
   }
+}
