--- a/ohmyfood/sass/pages/_homepage.scss
+++ b/ohmyfood/sass/pages/_homepage.scss
@@ -79,13 +79,16 @@ a.restaurant-page {
     margin: 8%;
     margin-bottom: 2%;
     background-color: whitesmoke;
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 300ms;
 
     &:hover {
       background-color: lighten($color: $primary-color, $amount: 35);
+      transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 300ms;
     }
 
     &:hover > .step-icon {
       color: $primary-color;
+      transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 300ms;
     }
     .step-number {
       color: white;
@@ -131,10 +134,22 @@ a.restaurant-page {
     animation: progressive-spawn $prog-bar-dur 5s both;
     img {
       object-fit: cover;
-      object-position: 50% -20px;
       width: 90vw;
       height: 150px;
       border-radius: 15px 15px 0px 0px;
+    }
+    /* Positionnement des images des restaurants */
+    .image-lpdg {
+      object-position: 50% bottom;
+    }
+    .image-lne {
+      object-position: 50% 60%;
+    }
+    .image-alf {
+      object-position: 50% bottom;
+    }
+    .image-ldds {
+      object-position: 50% bottom;
     }
     .restaurant-new {
       position: absolute;
@@ -191,10 +206,10 @@ a.restaurant-page {
   }
 }
 
-/* Fin du scss principal des pages de menus. Résolution minimale : 320px */
+/* Résolution minimale : 375px */
 @media (min-width: 375px) {
   #user-location {
-    padding-right: 65px;
+    padding-right: 125px;
   }
 
   #explore-restaurant {
@@ -224,6 +239,14 @@ a.restaurant-page {
         margin-left: 20px;
         margin-top: auto;
         margin-bottom: auto;
+      }
+    }
+  }
+
+  #restaurants-choice {
+    .restaurant-block {
+      img {
+        height: 175px;
       }
     }
   }
@@ -235,7 +258,7 @@ a.restaurant-page {
   }
 
   #explore-restaurant {
-    padding: 10% 5%;
+    padding: 10% 15%;
     h1 {
       padding: 0% 10%;
     }
@@ -261,6 +284,51 @@ a.restaurant-page {
         margin-left: 20px;
         margin-top: auto;
         margin-bottom: auto;
+      }
+    }
+  }
+  #restaurants-choice {
+    .restaurant-block {
+      img {
+        height: 200px;
+      }
+    }
+  }
+}
+
+/* Format tablette */
+@media (min-width: 768px) {
+  .spinner {    
+    border: 15px solid $primary-color;
+    border-top-color: $secondary-color;
+  }
+  .loading-logo {
+    font-size: 35px;
+  }
+  /* Style des blocs montrant les étapes de sélection */
+  #how-to {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;
+    .steps-title {
+      @include title-style;
+      padding-left: 25%;
+      padding-right: 25%;
+      margin: auto;
+      margin-top: 15px;
+      margin-bottom: 35px;
+      text-align: center;
+    }
+    .step {
+      position: relative;
+      padding: 3% 2% 3% 0%;
+      margin: auto;
+      margin-bottom: 2%;
+
+      .step-number {
+        position: absolute;
+        left: 50%;
+        top: -25px;
       }
     }
   }
